[package]
name = "jq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.147"
serde_json = "1.0.87"
clap = { version = "4.0.26", features = ["derive"] }
anyhow = "1.0.66"
csv = "1.1.6"
regex = "1.7.0"
colored_json = "3.0.1"
