[package]
name = "jq"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.147"
serde_json = "1.0.87"
clap = { version = "4.0.26", features = ["derive"] }
anyhow = "1.0.66"
csv = "1.1.6"
colored_json = "5.0.0"
serde_yaml = "0.9.16"
atty = "0.2.14"
kurtbuilds_regex = "0.1.0"
